--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
   <!-- google fonts -->
@@ -17,74 +17,114 @@
   
 </head>
 <body>
-  <main>
-    <header class="header">
-      <img class="header-logo" src="/images/logo.svg" alt="huddle logo">
+  <header class="header">
+    <nav>
+      <img class="header-logo" src="./images/logo.svg" alt="huddle logo">
       <button class="button header-button">Try it free</button>
-    </header>
-    <h1>Build The Community Your Fans Will Love</h1>
-
-    <p>
-      Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. 
-    </p>
-
-    <button class="button general-button">Get Started For Free</button>
-    <img src="/images/screen-mockups.svg" alt="screen mockups">
-
-
-    <div>
-      <h2>1.4k+</h2>
-      Communities Formed
+    </nav>
+  </header>
+  <main>
+    <div class="hero">
+      <h1>Build The Community Your Fans Will Love</h1>
+      <p>
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. 
+      </p>
+      <button class="button main-btn">Get Started For Free</button>
     </div>
+    <!-- community section -->
+    <div class="community">
+      <div class="community-img">
+        <img src="./images/screen-mockups.svg" alt="screen mockups">
+      </div>
+      <div>
+        <h2 class="form">1.4k+</h2>
+        Communities Formed
+      </div>
 
-    <div>
-      <h2>2.7m+</h2>
-      Messages Sent
+      <div class="message">
+        <h2>2.7m+</h2>
+        Messages Sent
+      </div>
     </div>
-    
-    <div class="grow-together-img">
-      <img class="grow-together-img" src="/images/illustration-grow-together.svg" alt="">
-    </div>
+    <!-- community section end -->
+
+
+
+  <!-- grow-together section  -->
     <div class="grow-together">
-      <h2 class="grow-together-h">Grow Together</h2>
-    <p class="grow-together-p">Generate meaningful discussions with your audience and build a strong, loyal community. 
-      Think of the insightful conversations you miss out on with a feedback form. </p>
+      <img src="./images/bg-section-top-mobile-1.svg" alt="">
+      <div class="grow-together-wrapper">
+       <img class="grow-together-img" src="./images/illustration-grow-together.svg" alt="">
+       <h2 class="grow-together-h">Grow Together</h2>
+        <p class="grow-together-p">Generate meaningful discussions with your audience and build a strong, loyal community. 
+        Think of the insightful conversations you miss out on with a feedback form. </p>
+      </div>
+      <img src="./images/bg-section-bottom-mobile-1.svg" alt="">
     </div>
-    <img src="/images/illustration-flowing-conversation.svg" alt="">
+    <!-- grow-together section end -->
 
-    <h2>Flowing Conversations</h2>
-    <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
-    <img src="/images/illustration-your-users.svg" alt="users Together">
 
-    <h2>Your Users</h2>
-    <p>  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
-        once signed in to your app, your users can start chatting immediately.</p>
+    <!-- conversation section  -->
 
-    <h2>Ready To Build Your Community?</h2>
-      <button button general-button>Get Started For Free</button>
+    <div class="conversation">
+      <div class="conversation-img">
+        <img src="./images/illustration-flowing-conversation.svg" alt="">
+      </div>
+      <h2>Flowing Conversations</h2>
+      <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+    </div>
+    <!-- conversation section end -->
+
+
+    <!-- users section  ------>
+
+    <div class="users">
+      <img src="./images/bg-section-top-mobile-2.svg" alt="">
+      <div class="users-wrapper">
+        <img src="./images/illustration-your-users.svg" alt="users Together">
+        <h2>Your Users</h2>
+        <p>  It takes no time at all to integrate Huddle with your app's       authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+      </div>
+      <img src="./images/bg-section-bottom-mobile-2.svg" alt="">
+    </div>
+    <!-- user section end-------- -->
+
+      <h2>Ready To Build Your Community?</h2>
+      <button class="button main-btn">Get Started For Free</button>
 
   </main>
-  
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
-  vestibulum a, ultrices quis sem.
-  
-  
-
-  <section class="newslatter">
-    Newsletter
-  To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
-
-  Subscribe
-  </section>
 
   <footer>
-  Phone: +1-543-123-4567
-  example@huddle.com
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Shukrullah Shirzad</a>.
-    </p>
+    <img src="./images/bg-footer-top-mobile.svg" alt="">
+    <div class="footer-wrapper">
+      <div class="newsletter">
+        <h3>Newsletter</h3>
+        <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+        <form action="#" method="post">
+          <input type="email" name="" id="">
+          <button>Subscribe</button>
+        </form>
+      </div>
+      <img src="./images/logo.svg" alt="">
+      <span>Huddle</span>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
+      </p>
+      <address>
+        <ul class="phone-email">
+          <li>Phone: +1-543-123-4567</li>
+          <li>example@huddle.com</li>
+        </ul>
+        <ul class="social-media">
+          <li>facebook</li>
+          <li>instagram</li>
+          <li>twitter</li>
+        </ul>
+      </address>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.Coded by <a href="#"> Shukrullah Shirzad</a>.
+      </p>
+    </div>
   </footer>
 </body>
 </html>
