--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   
   <title>Frontend Mentor | Huddle landing page with curved sections</title>
   <!-- google fonts -->
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
+  
+  
+  <!-- font awesome -->
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
     
   
@@ -34,25 +40,27 @@
     <!-- community section -->
     <div class="community">
       <div class="community-img">
-        <img src="./images/screen-mockups.svg" alt="screen mockups">
+        <img  src="./images/screen-mockups.svg" alt="screen mockups" >
       </div>
-      <div>
-        <h2 class="form">1.4k+</h2>
+      <div class="form">
+        <img src="./images/icon-communities.svg" alt="">
+        <span >1.4k+</span><br>
         Communities Formed
       </div>
 
       <div class="message">
-        <h2>2.7m+</h2>
+        <img src="./images/icon-messages.svg" alt="">
+        <span>2.7m+</span><br>
         Messages Sent
       </div>
     </div>
-    <!-- community section end -->
+  <!-- community section end -->
 
 
 
   <!-- grow-together section  -->
     <div class="grow-together">
-      <img src="./images/bg-section-top-mobile-1.svg" alt="">
+      <img src="./images/bg-section-top-mobile-1.svg" alt="" >
       <div class="grow-together-wrapper">
        <img class="grow-together-img" src="./images/illustration-grow-together.svg" alt="">
        <h2 class="grow-together-h">Grow Together</h2>
@@ -105,20 +113,19 @@
           <button>Subscribe</button>
         </form>
       </div>
-      <img src="./images/logo.svg" alt="">
-      <span>Huddle</span>
+        <span>Huddle</span>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
       </p>
       <address>
         <ul class="phone-email">
-          <li>Phone: +1-543-123-4567</li>
-          <li>example@huddle.com</li>
+          <li><img src="./images/icon-phone.svg" alt="">Phone: +1-543-123-4567</li>
+          <li><img src="./images/icon-email.svg" alt=""> example@huddle.com</li>
         </ul>
         <ul class="social-media">
-          <li>facebook</li>
-          <li>instagram</li>
-          <li>twitter</li>
+          <li class="social-media-icons"><i class="fab fa-facebook-square fa-2x" ></i></li>
+          <li class="social-media-icons"><i class="fab fa-instagram fa-2x"></i></li>
+          <li class="social-media-icons"><i class="fab fa-twitter-square fa-2x"></i></li>
         </ul>
       </address>
       <p class="attribution">
