finished mobile view and fixed the message and community icons

--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
       <div class="community-img">
         <img  src="./images/screen-mockups.svg" alt="screen mockups" >
       </div>
-      <div class="form">
-        <img src="./images/icon-communities.svg" alt="">
-        <span >1.4k+</span><br>
-        Communities Formed
-      </div>
+      <div class="figures">
+        <div class="form">
+          <img src="./images/icon-communities.svg" alt="">
+          <span >1.4k+</span><br>
+          Communities Formed
+        </div>
 
-      <div class="message">
-        <img src="./images/icon-messages.svg" alt="">
-        <span>2.7m+</span><br>
-        Messages Sent
+        <div class="message">
+          <img src="./images/icon-messages.svg" alt="">
+          <span>2.7m+</span><br>
+          Messages Sent
+        </div>
       </div>
     </div>
   <!-- community section end -->
@@ -96,10 +98,10 @@
       <img src="./images/bg-section-bottom-mobile-2.svg" alt="">
     </div>
     <!-- user section end-------- -->
-
+    <div class="end-button">
       <h2>Ready To Build Your Community?</h2>
       <button class="button main-btn">Get Started For Free</button>
-
+    </div>
   </main>
 
   <footer>
