sections for desktop view had been prepared

--- a/index.html
+++ b/index.html
@@ -62,14 +62,15 @@
 
   <!-- grow-together section  -->
     <div class="grow-together">
-      <img src="./images/bg-section-top-mobile-1.svg" alt="" >
-      <div class="grow-together-wrapper">
-       <img class="grow-together-img" src="./images/illustration-grow-together.svg" alt="">
-       <h2 class="grow-together-h">Grow Together</h2>
-        <p class="grow-together-p">Generate meaningful discussions with your audience and build a strong, loyal community. 
-        Think of the insightful conversations you miss out on with a feedback form. </p>
-      </div>
-      <img src="./images/bg-section-bottom-mobile-1.svg" alt="">
+        <div class="grow-together-img">
+          <img class="grow-together-img" src="./images/illustration-grow-together.svg" alt="">
+        </div>
+        <div class="grow-together-text">
+          <h2 class="grow-together-h">Grow Together</h2>
+          <p class="grow-together-p">Generate meaningful discussions with your audience and build a strong, loyal community. 
+          Think of the insightful conversations you miss out on with a feedback form. </p>
+        </div>
+      
     </div>
     <!-- grow-together section end -->
 
@@ -89,13 +90,12 @@
     <!-- users section  ------>
 
     <div class="users">
-      <img src="./images/bg-section-top-mobile-2.svg" alt="">
+      
       <div class="users-wrapper">
         <img src="./images/illustration-your-users.svg" alt="users Together">
         <h2>Your Users</h2>
         <p>  It takes no time at all to integrate Huddle with your app's       authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
       </div>
-      <img src="./images/bg-section-bottom-mobile-2.svg" alt="">
     </div>
     <!-- user section end-------- -->
     <div class="end-button">
@@ -105,8 +105,7 @@
   </main>
 
   <footer>
-    <img src="./images/bg-footer-top-mobile.svg" alt="">
-    <div class="footer-wrapper">
+      <div class="footer-wrapper">
       <div class="newsletter">
         <h3>Newsletter</h3>
         <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
@@ -115,11 +114,13 @@
           <button>Subscribe</button>
         </form>
       </div>
-        <span>Huddle</span>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
-      </p>
       <address>
+        <div class="huddle">
+          <span>Huddle</span>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
+          </p>
+        </div>
         <ul class="phone-email">
           <li><img src="./images/icon-phone.svg" alt="">Phone: +1-543-123-4567</li>
           <li><img src="./images/icon-email.svg" alt=""> example@huddle.com</li>
