I have created a copy of index and style code

--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
       </p>
       <button class="button main-btn">Get Started For Free</button>
     </div>
-    <!-- community section -->
+    <!------- community section------- -->
     <div class="community">
       <div class="community-img">
         <img  src="./images/screen-mockups.svg" alt="screen mockups" >
@@ -106,34 +106,34 @@
 
   <footer>
       <div class="footer-wrapper">
-      <div class="newsletter">
-        <h3>Newsletter</h3>
-        <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
-        <form action="#" method="post">
-          <input type="email" name="" id="">
-          <button>Subscribe</button>
-        </form>
-      </div>
-      <address>
-        <div class="huddle">
-          <span>Huddle</span>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
-          </p>
+        <div class="newsletter">
+          <h3>Newsletter</h3>
+          <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+          <form action="#" method="post">
+            <input type="email" name="" id="">
+            <button>Subscribe</button>
+          </form>
         </div>
-        <ul class="phone-email">
-          <li><img src="./images/icon-phone.svg" alt="">Phone: +1-543-123-4567</li>
-          <li><img src="./images/icon-email.svg" alt=""> example@huddle.com</li>
-        </ul>
-        <ul class="social-media">
-          <li class="social-media-icons"><i class="fab fa-facebook-square fa-2x" ></i></li>
-          <li class="social-media-icons"><i class="fab fa-instagram fa-2x"></i></li>
-          <li class="social-media-icons"><i class="fab fa-twitter-square fa-2x"></i></li>
-        </ul>
-      </address>
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.Coded by <a href="#"> Shukrullah Shirzad</a>.
-      </p>
+        <address>
+          <div class="huddle">
+            <span>Huddle</span>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
+            </p>
+          </div>
+          <ul class="phone-email">
+            <li><img src="./images/icon-phone.svg" alt="">Phone: +1-543-123-4567</li>
+            <li><img src="./images/icon-email.svg" alt=""> example@huddle.com</li>
+          </ul>
+          <ul class="social-media">
+            <li class="social-media-icons"><i class="fab fa-facebook-square fa-2x" ></i></li>
+            <li class="social-media-icons"><i class="fab fa-instagram fa-2x"></i></li>
+            <li class="social-media-icons"><i class="fab fa-twitter-square fa-2x"></i></li>
+          </ul>
+        </address>
+        <p class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.Coded by <a href="#"> Shukrullah Shirzad</a>.
+        </p>
     </div>
   </footer>
 </body>
